# perun-polkadot-node

./: .gitmodules  README.md  docker-compose.yml
.github/workflows/: benchmark.yml  docker.yml  markdown.yml  rust.yml
frontend/: Dockerfile
frontend/src/config/: types.json
node/: .dockerignore  Cargo.toml  Dockerfile
node/node/: Cargo.toml
node/node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
node/runtime/: Cargo.toml
node/runtime/src/: app.rs  lib.rs
