[workspace.package]
authors = ["PolyCrypt GmbH <info@polycry.pt>"]
edition = "2021"
repository = "https://github.com/perun-network/perun-polkadot-node"
license = "MIT-0"
homepage = "https://perun.network/"

[workspace]
members = [
    "node",
    "pallets/pallet-perun",
    "runtime",
]
resolver = "2"
[profile.release]
panic = "unwind"

[workspace.lints.rust]